src/objects/Condition_Description__c.object
<CustomObject>
    <fields>
        <fullName>Code_To_Use__c</fullName>
        <description>It will hold the short cut code of Condition Description.</description>
        <label>Code To Use</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It hold the details about Group1.</description>
        <label>Group1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAW_Name__c</fullName>
        <description>It will hold the MAW Name.</description>
        <label>MAW Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional Conditional Description</description>
        <inlineHelpText>This would appear when the smart search does not match with the condition description.</inlineHelpText>
        <label>Not Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Subspecialty__c</fullName>
        <description>It will save the Treatment Subspecialty details in this field.</description>
        <label>Treatment Subspecialty</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify whether ICD is eligible and no need for medical question</description>
        <label>Hidden isEligible</label>
        <type>Checkbox</type>
    </fields>
    <label>Condition Description</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Description</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>